[package]
name = "wee-matrix"
description = "A matrix library for Rust"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@gmail.com>"]

license = "MIT"
license-file = "LICENSE"

repository = "https://github.com/jblondin/matrix"

[dependencies]
blas = { version = "0.15" }
lapack = { version = "0.11" }
num = "0.1"
error-chain = "0.11"
rand = "0.3"
unittest = "0.1.0"
